# AeroWing-Science-Workbench

./: .env.example  .gitignore  AGENTS.md  LICENSE  PLAN.md  PRODUCT.md  README.md  README_CN.md  agent.py  agents.md  date_middleware.py  deepagent.config.json  dynamic_local_backend.py  goal_middleware.py  goal_state.py  goal_tools.py  image_generation_tools.py  importantnotes.md  internagent.resources.example.json  internagent.resources.json  internagent_resources.py  internagents_backend_cli.py  kb_sync_middleware.py  langgraph.json  langgraph.runtime.json  main.py  mcp_config.py  mcp_tools.py  mineru_middleware.py  pyproject.toml  requirements.txt  scp_catalog.json  scp_catalog.py  scp_middleware.py  scp_state.py  scp_tools.py  thread_skill_middleware.py  web_search_tools.py
.github/workflows/: dispatch-official-release.yml  package.yml  pages.yml  release.yml
SuperMe-docs/: 20-workflow-incidents.md  remote-compute-permission-card-comparison.md
desktop/: package-lock.json  package.json
desktop/electron/: main.cjs  splash.html
desktop/scripts/: build-mac.mjs  build-win.mjs  prepare-dist.mjs
desktop/templates/: deepagent.config.json
dev-docs/: development-notes.md
doc/: implementation-log.md  空中之翼.md
docs/: context-management-analysis.md  desktop-user-guide.md  kb-agent-guide.md  kb-bootstrap.md  kb-cli-spec.md  kb_bootstrap.md  research-agent-collab-architecture.md  research-agent-collab-prd.md  runtime-event-schema.md  user-manual.md  web-ui-remote-agent-change-summary.md
docs/middleware-reports/: README.md  cli-repl-deploy-middleware.md  core-utility-middleware.md  filesystem-middleware.md  (+4 more)
internagents/: aerowing_engineering_tools.py  agent_graph.py  aircraft_geometry_audit_tools.py  backend_cli.py  date_middleware.py  dynamic_local_backend.py  goal_middleware.py  goal_state.py  goal_tools.py  internagent_resources.py  kb_sync_middleware.py  mcp_config.py  mcp_tools.py  remote_compute_tools.py  ssh_backend.py  thread_skill_middleware.py  web_search_tools.py
kb_infra/: README.md  package.json
scripts/: aerowing-job-runner.mjs  build-showcase-pages.mjs  check_kb_runtime.py  dev.sh
tests/: smoke_kb_cli.sh  test_date_middleware.py  test_dynamic_local_backend.py  test_goal_state.py  test_image_generation_tools.py  test_mcp_config.py  test_mineru_middleware.py  test_model_provider_config.py  test_remote_runtime_image_compat.py  test_scp_state.py  test_thread_skill_middleware.py  test_web_search_tools.py
ui/: README.md  deepagent-ui.config.example.json  deepagent-ui.config.json  next.config.ts  package-lock.json  package.json  tailwind.config.mjs
(+188 files in other folders)
