[project]
name = "local-deepagent-ui-demo"
version = "0.1.0"
description = "Local DeepAgent graph for use with the official Deep Agents UI."
requires-python = ">=3.11,<4.0"
dependencies = [
    "deepagents>=0.5.7",
    "langchain-openai",
    "langchain-openrouter>=0.2.0",
    "langgraph-cli[inmem]",
    "python-dotenv",
    "socksio",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
internagents-backend = "internagents_backend_cli:main"

[tool.setuptools]
py-modules = ["agent", "main", "internagent_resources", "ssh_backend", "dynamic_local_backend", "kb_sync_middleware", "goal_state", "goal_tools", "goal_middleware", "mineru_middleware", "internagents_backend_cli"]
