[project]
name = "local-deepagent-ui-demo"
version = "0.1.0"
description = "Local DeepAgent graph for use with the official Deep Agents UI."
requires-python = ">=3.11,<4.0"
dependencies = [
    "deepagents>=0.5.7",
    "langchain-openai",
    "langchain-mcp-adapters",
    "langchain-openrouter>=0.2.0",
    "langgraph-cli[inmem]",
    "defusedxml",
    "lxml",
    "markitdown[pptx]",
    "openpyxl",
    "pandas",
    "python-dotenv",
    "socksio",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
internagents-backend = "internagents.backend_cli:main"

[tool.setuptools]
py-modules = ["agent", "main"]
packages = ["internagents"]
